submitit/logs_submitit_master/slurm_jobs_ALL_8_GROUPS_INTRA_20250630_085217/352128_4_0_log.err
submitit ERROR (2025-06-30 08:52:22,433) - Submitted job triggered an exception
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/_submit.py", line 11, in <module>
    submitit_main()
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/submission.py", line 76, in submitit_main
    process_job(args.folder)
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/submission.py", line 69, in process_job
    raise error
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/submission.py", line 55, in process_job
    result = delayed.result()
             ^^^^^^^^^^^^^^^^
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/utils.py", line 137, in result
    self._result = self.function(*self.args, **self.kwargs)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/tom.balay/Baking_EEG/submitit/submit_allgroup.py", line 145, in execute_group_decoding_wrapper
    from examples.run_decoding_one_group_pp import execute_group_intra_subject_decoding_analysis
  File "/home/tom.balay/Baking_EEG/examples/__init__.py", line 24, in <module>
    from .run_decoding_one_lg import execute_single_subject_lg_decoding
  File "/home/tom.balay/Baking_EEG/examples/run_decoding_one_lg.py", line 943
    return subject_results
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
srun: error: node7: task 0: Exited with exit code 1
